# Utcd

utcd/: .gitignore  .rubocop.yml  Gemfile  LICENSE.txt  README.md  Rakefile  schema.json  utcd.gemspec
utcd-server/: Cargo.toml
utcd-server/src/: main.rs
utcd-server/src/upload/: delete_query.rs  download_query.rs  files_query.rs  mod.rs  upload_query.rs
utcd/lib/: api.rb  constants.rb  network.rb  queries.rb  tools.rb  utcd.rb
utcd/lib/utcd/: version.rb
utcd/spec/: spec_helper.rb  utcd_spec.rb
