[package]
name = "babelium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
actix-web = "4.0.1"
actix-web-actors="4.1.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
serde_json = "1.0.44"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
chrono = "0.4.19"
serde = {version = "1.0", features = ["derive"] }
futures = "0.3"
futures-util = "0.3.19"
awmp = "0.8.1"
actix-cors = "0.6.1"
mime_guess = "2.0.4"
mime = "0.3.16"
actix-files = "0.6.0"
glob = "0.3.0"
